Tweak styling to avoid year range interval box border cutoff

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   background-color: white;
 }
 
@@ -15,7 +15,8 @@ svg {
   shape-rendering: crispEdges;
 }
 
-#yearRangeInputContainer, #include2017CheckboxContainer {
+#yearRangeInputContainer,
+#include2017CheckboxContainer {
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -47,6 +48,7 @@ svg {
   width: 30px;
   outline: none;
   text-align: center;
+  border: 1px solid rgb(169 169 169);
 }
 
 .barGroups:hover {
@@ -79,7 +81,8 @@ tspan.bottomBoldLabel {
   font-weight: bold;
 }
 
-#dataByYear, #dataOnCurrentScreen {
+#dataByYear,
+#dataOnCurrentScreen {
   cursor: pointer;
 }
 
